--- a/TranTheDuy_17093161/views/index.handlebars
+++ b/TranTheDuy_17093161/views/index.handlebars
@@ -2,33 +2,36 @@
 
 <div class="btn-toolbar d-flex justify-content-center" role="group" aria-label="Basic example">
     <button type="button" class="btn btn-secondary mx-2" data-toggle="modal" data-target="#addModal">Thêm</button>
-    <button type="button" class="btn btn-danger mx-2" data-toggle="modal" data-target="#deleteModal">Xoá</button>
-    <button type="button" class="btn btn-primary mx-2" data-toggle="modal" data-target="#updateModal">Sửa</button>
 </div>
 <br>
 
 <table class="table table-bordered">
     <thead>
-        <th scope="col">Id</th>
+        {{!-- <th scope="col">Id</th> --}}
         <th scope="col">Mã sinh viên</th>
         <th scope="col">Tên sinh viên</th>
         <th scope="col">Năm sinh</th>
         <th scope="col">Mã lớp</th>
         <th scope="col">Avatar</th>
+        <th scope="col">Xoá</th>
+        <th scope="col">Sửa</th>
     </thead>
     <tbody>
         {{#each sinhviens}}
         <tr>
-            <!-- <td>{{this.id}}</td> -->
-            <td>{{this.ma_sinhvien}}</td>
-            <td>{{this.ten_sinhvien}}</td>
-            <td>{{this.namsinh}}</td>
-            <td>{{this.ma_lop}}</td>
+            {{!-- <td class="align-middle">{{this.id}}</td> --}}
+            <td class="align-middle">{{this.ma_sinhvien}}</td>
+            <td class="align-middle">{{this.ten_sinhvien}}</td>
+            <td class="align-middle">{{this.namsinh}}</td>
+            <td class="align-middle">{{this.ma_lop}}</td>
             <td>
-                <img class="rounded mx-auto d-block" height="100" src="{{this.avatar}}" alt="">
+                <img class="rounded mx-auto d-block" height="100" src="{{this.avatar.src}}" alt="">
             </td>
-            <td>
-                form
+            <td class="align-middle text-center">
+                <button class="btn btn-danger mx-2" onClick="xoa('{{this.id}}')">Xoá</button>
+            </td>
+            <td class="align-middle text-center">
+                <button type="button" class="btn btn-primary mx-2" data-toggle="modal" data-target="#updateModal" onclick="get('{{this.id}}')">Sửa</button>
             </td>
         </tr>
         {{/each}}
@@ -81,6 +84,61 @@
             <!-- Modal footer -->
             <div class="modal-footer">
                 <button type="submit" form="addForm" class="btn btn-success" value="submit">Thêm</button>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<!-- The Modal -->
+<div class="modal" id="updateModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">Sửa sinh viên</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+                <form action="/quanlysinhvien/update" method="POST" id="updateForm" enctype="multipart/form-data">                    
+                    <div class="form-group">
+                        <label for="idUpdate">Mã sinh viên</label>
+                        <input type="text" class="form-control" id="idUpdate" name="idUpdate" readonly required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="maSVUpdate">Mã sinh viên</label>
+                        <input type="text" class="form-control" id="maSVUpdate" name="maSVUpdate" readonly required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="tenSVUpdate">Tên sinh viên</label>
+                        <input type="text" class="form-control" id="tenSVUpdate" name="tenSVUpdate" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="namSinhUpdate">Năm sinh</label>
+                        <input type="date" class="form-control" id="namSinhUpdate" name="namSinhUpdate" max="2020-10-24" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="maLopUpdate">Mã lớp</label>
+                        <input type="text" class="form-control" id="maLopUpdate" name="maLopUpdate" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="avatarUpdate">Avatar</label>
+                        <input type="file" class="form-control-file" id="avatarUpdate" name="avatarUpdate" accept="image/*">
+                    </div>
+                </form>
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <button type="submit" form="updateForm" class="btn btn-success" value="submit">Sửa</button>
             </div>
 
         </div>
