--- a/TranTheDuy_17093161/views/layouts/main.handlebars
+++ b/TranTheDuy_17093161/views/layouts/main.handlebars
@@ -14,6 +14,7 @@
     </div>
     <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/deleteSV.js"></script>
 </body>
 
 </html>
