render is not good to use

--- a/TranTheDuy_17093161/views/index.handlebars
+++ b/TranTheDuy_17093161/views/index.handlebars
@@ -7,7 +7,7 @@
 
 <table class="table table-bordered">
     <thead>
-        {{!-- <th scope="col">Id</th> --}}
+        <th scope="col">Id</th>
         <th scope="col">Mã sinh viên</th>
         <th scope="col">Tên sinh viên</th>
         <th scope="col">Năm sinh</th>
@@ -19,7 +19,7 @@
     <tbody>
         {{#each sinhviens}}
         <tr>
-            {{!-- <td class="align-middle">{{this.id}}</td> --}}
+            <td class="align-middle">{{this.id}}</td>
             <td class="align-middle">{{this.ma_sinhvien}}</td>
             <td class="align-middle">{{this.ten_sinhvien}}</td>
             <td class="align-middle">{{this.namsinh}}</td>
